syntax.output
Terminals unused in grammar

    "case"
    "otherwise"


Grammar

    0 $accept: program "EOF"

    1 program: header declarations subprograms comp_statement "."

    2 header: "program" "id" ";"
    3       | error "id" ";"
    4       | "program" error ";"
    5       | "program" "id" error

    6 declarations: constdefs typedefs vardefs

    7 constdefs: "const" constant_defs ";"
    8          | error constant_defs ";"
    9          | "sconst" error ";"
   10          | "const" constant_defs error
   11          | %empty

   12 constant_defs: constant_defs ";" "id" "=" expression
   13              | "id" "=" expression

   14 expression: expression "> >= < <= <>" expression
   15           | expression "=" expression
   16           | expression "orop" expression
   17           | expression "+ -" expression
   18           | expression "* / DIV MOD AND" expression
   19           | "+ -" expression
   20           | "notop" expression
   21           | "HEAD TAIL" expression
   22           | variable
   23           | "id" "(" expressions ")"
   24           | "length" "(" expression ")"
   25           | constant
   26           | "(" expression ":" expression ")"
   27           | "(" expression ")"

   28 variable: "id"
   29         | variable "[" expressions "]"
   30         | variable "[" expressions error

   31 expressions: expressions "," expression
   32            | expression

   33 constant: "iconst"
   34         | "rconst"
   35         | "bconst"
   36         | "cconst"
   37         | "sconst"

   38 typedefs: "type" type_defs ";"
   39         | %empty

   40 type_defs: type_defs ";" "id" "=" type_def
   41          | "id" "=" type_def

   42 type_def: "array" "[" dims "]" "of" typename
   43         | "coyple" "of" typename
   44         | limit ".." limit

   45 dims: dims "," limits
   46     | limits

   47 limits: limit ".." limit
   48       | "id"

   49 limit: sign "iconst"
   50      | "cconst"
   51      | "bconst"
   52      | "+ -" "id"
   53      | "id"

   54 sign: "+ -"
   55     | %empty

   56 typename: standard_type
   57         | "id"

   58 standard_type: "integer"
   59              | "real"
   60              | "boolean"
   61              | "char"
   62              | "string"

   63 vardefs: "var" variable_defs ";"
   64        | %empty

   65 variable_defs: variable_defs ";" identifiers ":" typename
   66              | identifiers ":" typename

   67 identifiers: identifiers "," "id"
   68            | "id"

   69 subprograms: subprograms subprogram ";"
   70            | %empty

   71 subprogram: sub_header ";" "froward"
   72           | sub_header ";" declarations subprograms comp_statement

   73 sub_header: "function" "id" formal_parameters ":" typename
   74           | "procedure" "id" formal_parameters
   75           | "function" "id"

   76 formal_parameters: "(" parameter_list ")"
   77                  | %empty

   78 parameter_list: parameter_list ";" pass identifiers ":" typename
   79               | pass identifiers ":" typename

   80 pass: "var"
   81     | %empty

   82 $@1: %empty

   83 comp_statement: "begin" $@1 statements "end"

   84 statements: statements ";" statement
   85           | statement

   86 statement: assignment
   87          | if_statement
   88          | while_statement
   89          | for_statement
   90          | subprogram_call
   91          | io_statement
   92          | comp_statement
   93          | %empty

   94 assignment: variable ":=" expression
   95           | variable error expression
   96           | variable ":=" error

   97 if_statement: "if" expression "then" statement if_tail

   98 if_tail: "else" statement
   99        | %empty

  100 while_statement: "while" expression "do" statement

  101 for_statement: "for" "id" ":=" iter_space "do" statement

  102 iter_space: expression "to" expression
  103           | expression "downto" expression

  104 subprogram_call: "id"
  105                | "id" "(" expressions ")"

  106 io_statement: "read" "(" read_list ")"
  107             | "write" "(" write_list ")"

  108 read_list: read_list "," read_item
  109          | read_item

  110 read_item: variable

  111 write_list: write_list "," write_item
  112           | write_item

  113 write_item: expression


Terminals, with rules where they appear

    "EOF" (0) 0
    error (256) 3 4 5 8 9 10 30 95 96
    "program" (258) 2 4 5
    "const" (259) 7 10
    "type" (260) 38
    "coyple" (261) 43
    "array" (262) 42
    "of" (263) 42 43
    "var" (264) 63 80
    "froward" (265) 71
    "function" (266) 73 75
    "procedure" (267) 74
    "integer" (268) 58
    "real" (269) 59
    "boolean" (270) 60
    "char" (271) 61
    "string" (272) 62
    "begin" (273) 83
    "end" (274) 83
    "if" (275) 97
    "then" (276) 97
    "else" (277) 98
    "case" (278)
    "otherwise" (279)
    "while" (280) 100
    "do" (281) 100 101
    "for" (282) 101
    "downto" (283) 103
    "to" (284) 102
    "read" (285) 106
    "write" (286) 107
    "length" (287) 24
    "> >= < <= <>" (288) 14
    "+ -" (289) 17 19 52 54
    "orop" (290) 16
    "* / DIV MOD AND" (291) 18
    "notop" (292) 20
    "HEAD TAIL" (293) 21
    "(" (294) 23 24 26 27 76 105 106 107
    ")" (295) 23 24 26 27 76 105 106 107
    ";" (296) 2 3 4 7 8 9 12 38 40 63 65 69 71 72 78 84
    ".." (297) 44 47
    "." (298) 1
    "," (299) 31 45 67 108 111
    ":=" (300) 94 96 101
    "=" (301) 12 13 15 40 41
    ":" (302) 26 65 66 73 78 79
    "[" (303) 29 30 42
    "]" (304) 29 42
    "id" <stringval> (305) 2 3 5 12 13 23 28 40 41 48 52 53 57 67 68 73 74 75 101 104 105
    "iconst" <intval> (306) 33 49
    "bconst" <boolval> (307) 35 51
    "cconst" <charval> (308) 36 50
    "sconst" <stringval> (309) 9 37
    "rconst" <doubleval> (310) 34
    NO_ELSE (311)


Nonterminals, with rules where they appear

    $accept (57)
        on left: 0
    program (58)
        on left: 1
        on right: 0
    header (59)
        on left: 2 3 4 5
        on right: 1
    declarations (60)
        on left: 6
        on right: 1 72
    constdefs (61)
        on left: 7 8 9 10 11
        on right: 6
    constant_defs (62)
        on left: 12 13
        on right: 7 8 10 12
    expression (63)
        on left: 14 15 16 17 18 19 20 21 22 23 24 25 26 27
        on right: 12 13 14 15 16 17 18 19 20 21 24 26 27 31 32 94 95 97 100 102 103 113
    variable (64)
        on left: 28 29 30
        on right: 22 29 30 94 95 96 110
    expressions (65)
        on left: 31 32
        on right: 23 29 30 31 105
    constant (66)
        on left: 33 34 35 36 37
        on right: 25
    typedefs (67)
        on left: 38 39
        on right: 6
    type_defs (68)
        on left: 40 41
        on right: 38 40
    type_def (69)
        on left: 42 43 44
        on right: 40 41
    dims (70)
        on left: 45 46
        on right: 42 45
    limits (71)
        on left: 47 48
        on right: 45 46
    limit (72)
        on left: 49 50 51 52 53
        on right: 44 47
    sign (73)
        on left: 54 55
        on right: 49
    typename (74)
        on left: 56 57
        on right: 42 43 65 66 73 78 79
    standard_type (75)
        on left: 58 59 60 61 62
        on right: 56
    vardefs (76)
        on left: 63 64
        on right: 6
    variable_defs (77)
        on left: 65 66
        on right: 63 65
    identifiers (78)
        on left: 67 68
        on right: 65 66 67 78 79
    subprograms (79)
        on left: 69 70
        on right: 1 69 72
    subprogram (80)
        on left: 71 72
        on right: 69
    sub_header (81)
        on left: 73 74 75
        on right: 71 72
    formal_parameters (82)
        on left: 76 77
        on right: 73 74
    parameter_list (83)
        on left: 78 79
        on right: 76 78
    pass (84)
        on left: 80 81
        on right: 78 79
    comp_statement (85)
        on left: 83
        on right: 1 72 92
    $@1 (86)
        on left: 82
        on right: 83
    statements (87)
        on left: 84 85
        on right: 83 84
    statement (88)
        on left: 86 87 88 89 90 91 92 93
        on right: 84 85 97 98 100 101
    assignment (89)
        on left: 94 95 96
        on right: 86
    if_statement (90)
        on left: 97
        on right: 87
    if_tail (91)
        on left: 98 99
        on right: 97
    while_statement (92)
        on left: 100
        on right: 88
    for_statement (93)
        on left: 101
        on right: 89
    iter_space (94)
        on left: 102 103
        on right: 101
    subprogram_call (95)
        on left: 104 105
        on right: 90
    io_statement (96)
        on left: 106 107
        on right: 91
    read_list (97)
        on left: 108 109
        on right: 106 108
    read_item (98)
        on left: 110
        on right: 108 109
    write_list (99)
        on left: 111 112
        on right: 107 111
    write_item (100)
        on left: 113
        on right: 111 112


State 0

    0 $accept: . program "EOF"

    error      shift, and go to state 1
    "program"  shift, and go to state 2

    program  go to state 3
    header   go to state 4


State 1

    3 header: error . "id" ";"

    "id"  shift, and go to state 5


State 2

    2 header: "program" . "id" ";"
    4       | "program" . error ";"
    5       | "program" . "id" error

    error  shift, and go to state 6
    "id"   shift, and go to state 7


State 3

    0 $accept: program . "EOF"

    "EOF"  shift, and go to state 8


State 4

    1 program: header . declarations subprograms comp_statement "."

    error     shift, and go to state 9
    "const"   shift, and go to state 10
    "sconst"  shift, and go to state 11

    "type"       reduce using rule 11 (constdefs)
    "var"        reduce using rule 11 (constdefs)
    "function"   reduce using rule 11 (constdefs)
    "procedure"  reduce using rule 11 (constdefs)
    "begin"      reduce using rule 11 (constdefs)

    declarations  go to state 12
    constdefs     go to state 13


State 5

    3 header: error "id" . ";"

    ";"  shift, and go to state 14


State 6

    4 header: "program" error . ";"

    ";"  shift, and go to state 15


State 7

    2 header: "program" "id" . ";"
    5       | "program" "id" . error

    error  shift, and go to state 16
    ";"    shift, and go to state 17


State 8

    0 $accept: program "EOF" .

    $default  accept


State 9

    8 constdefs: error . constant_defs ";"

    "id"  shift, and go to state 18

    constant_defs  go to state 19


State 10

    7 constdefs: "const" . constant_defs ";"
   10          | "const" . constant_defs error

    "id"  shift, and go to state 18

    constant_defs  go to state 20


State 11

    9 constdefs: "sconst" . error ";"

    error  shift, and go to state 21


State 12

    1 program: header declarations . subprograms comp_statement "."

    $default  reduce using rule 70 (subprograms)

    subprograms  go to state 22


State 13

    6 declarations: constdefs . typedefs vardefs

    "type"  shift, and go to state 23

    $default  reduce using rule 39 (typedefs)

    typedefs  go to state 24


State 14

    3 header: error "id" ";" .

    $default  reduce using rule 3 (header)


State 15

    4 header: "program" error ";" .

    $default  reduce using rule 4 (header)


State 16

    5 header: "program" "id" error .

    $default  reduce using rule 5 (header)


State 17

    2 header: "program" "id" ";" .

    $default  reduce using rule 2 (header)


State 18

   13 constant_defs: "id" . "=" expression

    "="  shift, and go to state 25


State 19

    8 constdefs: error constant_defs . ";"
   12 constant_defs: constant_defs . ";" "id" "=" expression

    ";"  shift, and go to state 26


State 20

    7 constdefs: "const" constant_defs . ";"
   10          | "const" constant_defs . error
   12 constant_defs: constant_defs . ";" "id" "=" expression

    error  shift, and go to state 27
    ";"    shift, and go to state 28


State 21

    9 constdefs: "sconst" error . ";"

    ";"  shift, and go to state 29


State 22

    1 program: header declarations subprograms . comp_statement "."
   69 subprograms: subprograms . subprogram ";"

    "function"   shift, and go to state 30
    "procedure"  shift, and go to state 31
    "begin"      shift, and go to state 32

    subprogram      go to state 33
    sub_header      go to state 34
    comp_statement  go to state 35


State 23

   38 typedefs: "type" . type_defs ";"

    "id"  shift, and go to state 36

    type_defs  go to state 37


State 24

    6 declarations: constdefs typedefs . vardefs

    "var"  shift, and go to state 38

    $default  reduce using rule 64 (vardefs)

    vardefs  go to state 39


State 25

   13 constant_defs: "id" "=" . expression

    "length"     shift, and go to state 40
    "+ -"        shift, and go to state 41
    "notop"      shift, and go to state 42
    "HEAD TAIL"  shift, and go to state 43
    "("          shift, and go to state 44
    "id"         shift, and go to state 45
    "iconst"     shift, and go to state 46
    "bconst"     shift, and go to state 47
    "cconst"     shift, and go to state 48
    "sconst"     shift, and go to state 49
    "rconst"     shift, and go to state 50

    expression  go to state 51
    variable    go to state 52
    constant    go to state 53


State 26

    8 constdefs: error constant_defs ";" .
   12 constant_defs: constant_defs ";" . "id" "=" expression

    "id"  shift, and go to state 54

    $default  reduce using rule 8 (constdefs)


State 27

   10 constdefs: "const" constant_defs error .

    $default  reduce using rule 10 (constdefs)


State 28

    7 constdefs: "const" constant_defs ";" .
   12 constant_defs: constant_defs ";" . "id" "=" expression

    "id"  shift, and go to state 54

    $default  reduce using rule 7 (constdefs)


State 29

    9 constdefs: "sconst" error ";" .

    $default  reduce using rule 9 (constdefs)


State 30

   73 sub_header: "function" . "id" formal_parameters ":" typename
   75           | "function" . "id"

    "id"  shift, and go to state 55


State 31

   74 sub_header: "procedure" . "id" formal_parameters

    "id"  shift, and go to state 56


State 32

   83 comp_statement: "begin" . $@1 statements "end"

    $default  reduce using rule 82 ($@1)

    $@1  go to state 57


State 33

   69 subprograms: subprograms subprogram . ";"

    ";"  shift, and go to state 58


State 34

   71 subprogram: sub_header . ";" "froward"
   72           | sub_header . ";" declarations subprograms comp_statement

    ";"  shift, and go to state 59


State 35

    1 program: header declarations subprograms comp_statement . "."

    "."  shift, and go to state 60


State 36

   41 type_defs: "id" . "=" type_def

    "="  shift, and go to state 61


State 37

   38 typedefs: "type" type_defs . ";"
   40 type_defs: type_defs . ";" "id" "=" type_def

    ";"  shift, and go to state 62


State 38

   63 vardefs: "var" . variable_defs ";"

    "id"  shift, and go to state 63

    variable_defs  go to state 64
    identifiers    go to state 65


State 39

    6 declarations: constdefs typedefs vardefs .

    $default  reduce using rule 6 (declarations)


State 40

   24 expression: "length" . "(" expression ")"

    "("  shift, and go to state 66


State 41

   19 expression: "+ -" . expression

    "length"     shift, and go to state 40
    "+ -"        shift, and go to state 41
    "notop"      shift, and go to state 42
    "HEAD TAIL"  shift, and go to state 43
    "("          shift, and go to state 44
    "id"         shift, and go to state 45
    "iconst"     shift, and go to state 46
    "bconst"     shift, and go to state 47
    "cconst"     shift, and go to state 48
    "sconst"     shift, and go to state 49
    "rconst"     shift, and go to state 50

    expression  go to state 67
    variable    go to state 52
    constant    go to state 53


State 42

   20 expression: "notop" . expression

    "length"     shift, and go to state 40
    "+ -"        shift, and go to state 41
    "notop"      shift, and go to state 42
    "HEAD TAIL"  shift, and go to state 43
    "("          shift, and go to state 44
    "id"         shift, and go to state 45
    "iconst"     shift, and go to state 46
    "bconst"     shift, and go to state 47
    "cconst"     shift, and go to state 48
    "sconst"     shift, and go to state 49
    "rconst"     shift, and go to state 50

    expression  go to state 68
    variable    go to state 52
    constant    go to state 53


State 43

   21 expression: "HEAD TAIL" . expression

    "length"     shift, and go to state 40
    "+ -"        shift, and go to state 41
    "notop"      shift, and go to state 42
    "HEAD TAIL"  shift, and go to state 43
    "("          shift, and go to state 44
    "id"         shift, and go to state 45
    "iconst"     shift, and go to state 46
    "bconst"     shift, and go to state 47
    "cconst"     shift, and go to state 48
    "sconst"     shift, and go to state 49
    "rconst"     shift, and go to state 50

    expression  go to state 69
    variable    go to state 52
    constant    go to state 53


State 44

   26 expression: "(" . expression ":" expression ")"
   27           | "(" . expression ")"

    "length"     shift, and go to state 40
    "+ -"        shift, and go to state 41
    "notop"      shift, and go to state 42
    "HEAD TAIL"  shift, and go to state 43
    "("          shift, and go to state 44
    "id"         shift, and go to state 45
    "iconst"     shift, and go to state 46
    "bconst"     shift, and go to state 47
    "cconst"     shift, and go to state 48
    "sconst"     shift, and go to state 49
    "rconst"     shift, and go to state 50

    expression  go to state 70
    variable    go to state 52
    constant    go to state 53


State 45

   23 expression: "id" . "(" expressions ")"
   28 variable: "id" .

    "("  shift, and go to state 71

    $default  reduce using rule 28 (variable)


State 46

   33 constant: "iconst" .

    $default  reduce using rule 33 (constant)


State 47

   35 constant: "bconst" .

    $default  reduce using rule 35 (constant)


State 48

   36 constant: "cconst" .

    $default  reduce using rule 36 (constant)


State 49

   37 constant: "sconst" .

    $default  reduce using rule 37 (constant)


State 50

   34 constant: "rconst" .

    $default  reduce using rule 34 (constant)


State 51

   13 constant_defs: "id" "=" expression .
   14 expression: expression . "> >= < <= <>" expression
   15           | expression . "=" expression
   16           | expression . "orop" expression
   17           | expression . "+ -" expression
   18           | expression . "* / DIV MOD AND" expression

    "> >= < <= <>"     shift, and go to state 72
    "+ -"              shift, and go to state 73
    "orop"             shift, and go to state 74
    "* / DIV MOD AND"  shift, and go to state 75
    "="                shift, and go to state 76

    $default  reduce using rule 13 (constant_defs)


State 52

   22 expression: variable .
   29 variable: variable . "[" expressions "]"
   30         | variable . "[" expressions error

    "["  shift, and go to state 77

    $default  reduce using rule 22 (expression)


State 53

   25 expression: constant .

    $default  reduce using rule 25 (expression)


State 54

   12 constant_defs: constant_defs ";" "id" . "=" expression

    "="  shift, and go to state 78


State 55

   73 sub_header: "function" "id" . formal_parameters ":" typename
   75           | "function" "id" .

    "("  shift, and go to state 79

    ":"       reduce using rule 77 (formal_parameters)
    $default  reduce using rule 75 (sub_header)

    formal_parameters  go to state 80


State 56

   74 sub_header: "procedure" "id" . formal_parameters

    "("  shift, and go to state 79

    $default  reduce using rule 77 (formal_parameters)

    formal_parameters  go to state 81


State 57

   83 comp_statement: "begin" $@1 . statements "end"

    "begin"  shift, and go to state 32
    "if"     shift, and go to state 82
    "while"  shift, and go to state 83
    "for"    shift, and go to state 84
    "read"   shift, and go to state 85
    "write"  shift, and go to state 86
    "id"     shift, and go to state 87

    $default  reduce using rule 93 (statement)

    variable         go to state 88
    comp_statement   go to state 89
    statements       go to state 90
    statement        go to state 91
    assignment       go to state 92
    if_statement     go to state 93
    while_statement  go to state 94
    for_statement    go to state 95
    subprogram_call  go to state 96
    io_statement     go to state 97


State 58

   69 subprograms: subprograms subprogram ";" .

    $default  reduce using rule 69 (subprograms)


State 59

   71 subprogram: sub_header ";" . "froward"
   72           | sub_header ";" . declarations subprograms comp_statement

    error      shift, and go to state 9
    "const"    shift, and go to state 10
    "froward"  shift, and go to state 98
    "sconst"   shift, and go to state 11

    "type"       reduce using rule 11 (constdefs)
    "var"        reduce using rule 11 (constdefs)
    "function"   reduce using rule 11 (constdefs)
    "procedure"  reduce using rule 11 (constdefs)
    "begin"      reduce using rule 11 (constdefs)

    declarations  go to state 99
    constdefs     go to state 13


State 60

    1 program: header declarations subprograms comp_statement "." .

    $default  reduce using rule 1 (program)


State 61

   41 type_defs: "id" "=" . type_def

    "coyple"  shift, and go to state 100
    "array"   shift, and go to state 101
    "+ -"     shift, and go to state 102
    "id"      shift, and go to state 103
    "bconst"  shift, and go to state 104
    "cconst"  shift, and go to state 105

    $default  reduce using rule 55 (sign)

    type_def  go to state 106
    limit     go to state 107
    sign      go to state 108


State 62

   38 typedefs: "type" type_defs ";" .
   40 type_defs: type_defs ";" . "id" "=" type_def

    "id"  shift, and go to state 109

    $default  reduce using rule 38 (typedefs)


State 63

   68 identifiers: "id" .

    $default  reduce using rule 68 (identifiers)


State 64

   63 vardefs: "var" variable_defs . ";"
   65 variable_defs: variable_defs . ";" identifiers ":" typename

    ";"  shift, and go to state 110


State 65

   66 variable_defs: identifiers . ":" typename
   67 identifiers: identifiers . "," "id"

    ","  shift, and go to state 111
    ":"  shift, and go to state 112


State 66

   24 expression: "length" "(" . expression ")"

    "length"     shift, and go to state 40
    "+ -"        shift, and go to state 41
    "notop"      shift, and go to state 42
    "HEAD TAIL"  shift, and go to state 43
    "("          shift, and go to state 44
    "id"         shift, and go to state 45
    "iconst"     shift, and go to state 46
    "bconst"     shift, and go to state 47
    "cconst"     shift, and go to state 48
    "sconst"     shift, and go to state 49
    "rconst"     shift, and go to state 50

    expression  go to state 113
    variable    go to state 52
    constant    go to state 53


State 67

   14 expression: expression . "> >= < <= <>" expression
   15           | expression . "=" expression
   16           | expression . "orop" expression
   17           | expression . "+ -" expression
   18           | expression . "* / DIV MOD AND" expression
   19           | "+ -" expression .

    "* / DIV MOD AND"  shift, and go to state 75

    $default  reduce using rule 19 (expression)


State 68

   14 expression: expression . "> >= < <= <>" expression
   15           | expression . "=" expression
   16           | expression . "orop" expression
   17           | expression . "+ -" expression
   18           | expression . "* / DIV MOD AND" expression
   20           | "notop" expression .

    $default  reduce using rule 20 (expression)


State 69

   14 expression: expression . "> >= < <= <>" expression
   15           | expression . "=" expression
   16           | expression . "orop" expression
   17           | expression . "+ -" expression
   18           | expression . "* / DIV MOD AND" expression
   21           | "HEAD TAIL" expression .

    $default  reduce using rule 21 (expression)


State 70

   14 expression: expression . "> >= < <= <>" expression
   15           | expression . "=" expression
   16           | expression . "orop" expression
   17           | expression . "+ -" expression
   18           | expression . "* / DIV MOD AND" expression
   26           | "(" expression . ":" expression ")"
   27           | "(" expression . ")"
